Corrected letter spacing, font size and other adjustments in the text inside the container

--- a/style.css
+++ b/style.css
@@ -3,29 +3,31 @@ body {
     justify-content: center;
     background-color: #d6e1ff;
     font-family: 'Red Hat Display', sans-serif;
+    height: 100rem;
 }
 
 .container {
+    margin-top: 5.8rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #ffffff;
-    width: 28.17rem;
-    border-radius: 15px;
+    width: 28.16rem;
+    border-radius: 20px;
 }
 
 img {
-    border-radius: 17px 17px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 h1 {
     margin-top: 2.9rem;
     color: #182642;
-    font-size: 1.8rem;
+    font-size: 1.79rem;
 }
 
 .paragraph {
-    margin-top: -1.25rem;
+    margin-top: -0.75rem;
     line-height: 0.6rem;
     letter-spacing: 0.195px;
     text-align: center;
@@ -34,21 +36,33 @@ h1 {
 p {
     color: #838b9c;
     font-size: 16.49px;
-    /*text-align: center;
-    letter-spacing: 0.195px;*/
+    margin-right: 2px;
+}
+
+.middlep {
+    font-size: 15.49999px;
+    letter-spacing: 0.0275rem;
+}
+
+.lastp {
+    font-size: 15.49999px;
+    letter-spacing: 0.0275rem;
 }
 
 .container2 {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 28rem;
-    margin-top: 2rem;
+    margin-top: 1.37rem;
+    background-color: #838b9c;
 }
 
 .plan {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    background-color: aqua;
 }
 
 h2 {
@@ -57,4 +71,5 @@ h2 {
 
 input {
     background-color: #382ae1;
+    width: 20rem;
 }
